# 3d-viewer

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  build.sh  run.sh  shell.nix
include/: gl.h  gl3.h
include/3dmodel/: light.h  material.h  mesh.h  model.h  scene.h  vertex.h
include/3dmodel/utils/: assimp_conversions.h
include/app/: 3dviewer.h  ResourceManager.h  app.h  camera.h  config.h  spinning_duck_app.h  userapp.h
include/glwrapper/: common.h  gl_object.h  shader.h  texture.h  vertexarray.h
include/util/: error.h  macro.h  util.h
include/utils/: error.h  math.h  path.h  util.h
misc/: down_scale_textures.cpp
res/shader/: light-source.frag  simple.frag  simple.v.glsl
resource/shader/: 3d_viewer.f.glsl  3d_viewer.v.glsl  light-source.f.glsl  simple.f.glsl  simple.v.glsl  spinning_duck.f.glsl  spinning_duck.v.glsl
shader/: simple.frag  simple.vert
src/: main.cpp
src/3dmodel/: light.cpp  material.cpp  mesh.cpp  model.cpp  scene.cpp  vertex.cpp
src/3dmodel/utils/: ai_conversions.cpp  assimp_conversions.cpp
src/app/: 3dviewer.cpp  App.cpp  App.h  ResourceManager.cpp  UserApp.cpp  UserApp.h  app.cpp  camera.cpp  camera.h  config.h  spinning_duck_app.cpp  userapp.cpp
src/glwrapper/: VertexArray.cpp  VertexArray.h  common.cpp  common.h  gl_object.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp
src/util/: error.cpp  error.h  math.h  path.cpp  util.cpp
